--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,4 @@ scalaBaseVersion=2.11
 # Internal Nexus location
 localNexusLocation=http://nexus:8081/nexus/repository
 
-enableLocalRepo=true
+useMavenLocal=true
