--- a/ml/build.gradle
+++ b/ml/build.gradle
@@ -16,7 +16,7 @@ dependencies {
 
   testCompile "org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}"
 
-  compile "ai.h2o:mojo2:0.6.0-SNAPSHOT"
+  compile "ai.h2o:mojo2-runtime:0.8.4"
   // And use scalatest for Scala testing
   testCompile "org.scalatest:scalatest_${scalaBaseVersion}:2.2.1"
   testCompile "junit:junit:4.11"
