--- a/assembly/build.gradle
+++ b/assembly/build.gradle
@@ -31,7 +31,7 @@ configurations.archives.artifacts.removeAll { it.archiveTask.is(jar) }
 // Shadow jar settings
 shadowJar {
   mergeServiceFiles()
-  //relocate 'javassist', 'ai.h2o.javassist'
+  relocate 'javassist', 'ai.h2o.javassist'
   // Relocate Eclipse Jetty to avoid collisions with Spark Jetty (newer version)
   relocate 'org.eclipse.jetty', 'ai.h2o.org.eclipse.jetty'
   dependencies {
