--- a/assembly/build.gradle
+++ b/assembly/build.gradle
@@ -40,7 +40,7 @@ shadowJar {
     // to run inside Spark environment providing some jars 
     // (like hadoop, aws) on classpath
     //
-    include(dependency("ai.h2o:mojo2:0.6.0-SNAPSHOT"))
+    include(dependency("ai.h2o:mojo2-runtime:0.8.4"))
     include(project(":sparkling-water-core"))
     include(project(":sparkling-water-examples"))
     include(project(":sparkling-water-repl"))
